# CS354R_Project2

./: .README.md.swp  .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
cmake/: resources.cfg
html/: Ball_8h_source.html  BulletContactCallback_8h_source.html  Component_8h_source.html  ECSManager_8h_source.html  Entity_8h_source.html  EventManager_8h_source.html  EventSubscribers_8h_source.html  Events_8h_source.html  GameObject_8h_source.html  GameState_8h_source.html  Game_8h_source.html  GenericObject_8h_source.html  MenuState_8h_source.html  Paddle_8h_source.html  SoundManager_8h_source.html  State_8h_source.html  System_8h_source.html  Util_8h_source.html  _ball_8cpp.html  _ball_8cpp__incl.map  _ball_8cpp__incl.md5  _ball_8cpp_source.html  _ball_8h.html  _ball_8h__dep__incl.map  _ball_8h__dep__incl.md5  _ball_8h__incl.map  _ball_8h__incl.md5  _ball_8h_source.html  _bullet_contact_callback_8h.html  _bullet_contact_callback_8h__dep__incl.map  _bullet_contact_callback_8h__dep__incl.md5  _bullet_contact_callback_8h__incl.map  _bullet_contact_callback_8h__incl.md5  _bullet_contact_callback_8h_source.html  _component_8h.html  _component_8h__dep__incl.map  _component_8h__dep__incl.md5  _component_8h__incl.map  _component_8h__incl.md5  _component_8h_source.html  (+485 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+49 more)
include/: Game.h  SoundManager.h
include/ECS/: Component.h  ComponentManager.h  ECSManager.h  Entity.h  EntityManager.h  EventManager.h  System.h
include/Events/: EventSubscribers.h  Events.h
include/GameObjects/: Ball.h  Camera.h  GameObject.h  GenericObject.h  Ground.h  Paddle.h  Rotatable.h
include/Physics/: BulletContactCallback.h  OgreKinematicMotionState.h  OgreMotionState.h
include/States/: GameState.h  MenuState.h  State.h
include/Util/: DebugDrawer.h  GameObject.h  GameState.h  State.h  Util.h
src/: Ball.cpp  Ball.h  Game.cpp  Game.h  Paddle.cpp  Paddle.h  SoundManager.cpp  SoundManager.h
src/ECS/: ECSManager.cpp  System.cpp
src/GameObjects/: Ball.cpp  Camera.cpp  GameObject.cpp  GenericObject.cpp  Ground.cpp  Paddle.cpp  (+1 more)
(+10 files in other folders)
